[package]
name = "blackpool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpu-time = "1.0.0"
derivative = "2.2.0"
derive_more = "0.99.17"
function_name = "0.3.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.200", features = ["derive"] }
thiserror = "1.0.59"

[dev-dependencies]
regex = "1.10.4"
test-generator = "0.3.1"
